fix uploaded image link + editor image align menu

--- a/src/components/Editor/ImageBubbleMenu/ImageBubbleMenu.module.scss
+++ b/src/components/Editor/ImageBubbleMenu/ImageBubbleMenu.module.scss
@@ -1,6 +1,8 @@
-.bubbleMenu {
-  background: #fff;
-  box-shadow: 0 4px 10px rgba(#000, 0.25);
+.ImageBubbleMenu {
+  background: #000;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 
   .bubbleMenuButton {
     display: inline-flex;
@@ -10,16 +12,8 @@
     opacity: 0.5;
     padding: 1rem;
 
-    .triangle {
-      margin-left: 4px;
-    }
-
-    .colorWheel {
-      display: inline-block;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      background: #f6e3a1;
+    img {
+      display: block;
     }
   }
 
@@ -28,58 +22,12 @@
   }
 
   .delimiter {
-    background: #999;
+    background: #fff;
+    opacity: 0.5;
     display: inline-block;
     height: 1.4em;
     margin: 0 0.2em;
     vertical-align: text-bottom;
     width: 1px;
-  }
-
-  .dropDownHolder {
-    position: relative;
-    cursor: pointer;
-    display: inline-flex;
-    flex-flow: row nowrap;
-    align-items: center;
-
-    .dropDown {
-      position: absolute;
-      padding: 6px;
-      top: calc(100% + 8px);
-      left: 50%;
-      transform: translateX(-50%);
-      box-shadow: 0 4px 10px rgb(0 0 0 / 25%);
-      background: #fff;
-      color: #898c94;
-
-      & > header {
-        font-size: 10px;
-        border-bottom: 1px solid #898c94;
-      }
-
-      .actions {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        gap: 12px;
-        flex-wrap: nowrap;
-        margin-bottom: 8px;
-
-        &:last-child {
-          margin-bottom: 0;
-        }
-
-        .bubbleMenuButton {
-          min-width: 40px;
-        }
-      }
-    }
-  }
-
-  .dropDownEnter,
-  .dropDownExit {
-    height: 0;
-    color: transparent;
   }
 }
